[package]
name = "rbx-sponsored-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
supports-hyperlinks = "2.1.0"
terminal_hyperlink = "0.1.0"
tokio = { version = "1.34.0", features = ["full"] }
